# RAG_Proj

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_structure.py
data/chroma_bge-m3/261e9ec8-6d51-4ea4-9df6-60ee40413165/: index_metadata.pickle
src/: model_and_embedding.py  query_data.py  ui.py  update_database.py
